--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,144 @@
 [project]
-name = "yourpkg"
+name = "Medical_KG"
 version = "0.1.0"
-description = "Replace me in scripts/init.sh"
+description = "Production-ready Medical Knowledge Graph with GPU-accelerated processing"
 readme = "README.md"
 requires-python = ">=3.12"
+dependencies = [
+    # HTTP & Async
+    "httpx[http2]>=0.27.0",
+    "tenacity>=8.2.0",
+    "aiolimiter>=1.1.0",
+    "anyio>=4.3.0",
+
+    # CLI & UI
+    "typer>=0.12.3",
+    "rich>=13.7.1",
+    "tqdm>=4.66.4",
+
+    # Data Models & Validation
+    "pydantic>=2.7.1",
+    "pydantic-settings>=2.2.1",
+    "python-dotenv>=1.0.1",
+    "jsonschema>=4.21.0",
+
+    # JSON & Serialization
+    "orjson>=3.10.4",
+    "jsonlines>=4.0.0",
+    "pyyaml>=6.0.1",
+
+    # XML/HTML Parsing
+    "lxml>=5.2.2",
+    "beautifulsoup4>=4.12.3",
+    "html5lib>=1.1",
+    "xmltodict>=0.13.0",
+
+    # RDF & SPARQL
+    "rdflib>=7.0.0",
+    "SPARQLWrapper>=2.0.0",
+
+    # Authentication & Security
+    "authlib>=1.3.1",
+    "cryptography>=42.0.0",
+
+    # Date & Time
+    "python-dateutil>=2.9.0.post0",
+
+    # NLP & Text Processing
+    "langdetect>=1.0.9",
+    "rapidfuzz>=3.6.1",
+    "spacy>=3.7.0",
+    "scispacy>=0.5.4",
+    "nltk>=3.8.1",
+    "chardet>=5.2.0",
+    "ftfy>=6.2.0",
+    "unidecode>=1.3.8",
+
+    # Machine Learning & Embeddings
+    "torch>=2.2.0",
+    "transformers>=4.38.0",
+    "sentence-transformers>=2.5.0",
+    "scikit-learn>=1.4.0",
+    "numpy>=1.26.0",
+    "scipy>=1.12.0",
+
+    # Data Science
+    "pandas>=2.2.2",
+    "pyarrow>=15.0.0",
+
+    # Databases & Storage
+    "neo4j>=5.15.0",
+    "opensearch-py>=2.4.0",
+    "boto3>=1.34.0",
+    "redis>=5.0.0",
+
+    # APIs
+    "fastapi>=0.110.0",
+    "uvicorn[standard]>=0.27.0",
+    "python-multipart>=0.0.9",
+    "pydantic[email]>=2.7.1",
+
+    # SHACL & Validation
+    "pyshacl>=0.25.0",
+
+    # Orchestration
+    "prefect>=2.16.0",
+
+    # Monitoring & Observability
+    "prometheus-client>=0.20.0",
+    "opentelemetry-api>=1.23.0",
+    "opentelemetry-sdk>=1.23.0",
+    "opentelemetry-instrumentation-fastapi>=0.44b0",
+    "opentelemetry-instrumentation-httpx>=0.44b0",
+
+    # Caching
+    "cachetools>=5.3.0",
+
+    # PDF Processing (GPU-only)
+    "mineru[all]>=0.1.0",
+
+    # LLM Serving (GPU-only)
+    "vllm>=0.3.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    # Testing
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "pytest-timeout>=2.2.0",
+    "hypothesis>=6.98.0",
+
+    # Code Quality
+    "black>=24.2.0",
+    "ruff>=0.3.0",
+    "mypy>=1.9.0",
+    "pre-commit>=3.6.0",
+
+    # Type Stubs
+    "types-requests>=2.31.0",
+    "types-pyyaml>=6.0.12",
+    "types-redis>=4.6.0",
+    "types-boto3>=1.34.0",
+
+    # Documentation
+    "mkdocs>=1.5.3",
+    "mkdocs-material>=9.5.0",
+
+    # Debugging & Profiling
+    "ipython>=8.21.0",
+    "ipdb>=0.13.13",
+    "memory-profiler>=0.61.0",
+    "py-spy>=0.3.14",
+]
+
+models = [
+    # SpaCy Models (download separately)
+    # python -m spacy download en_core_sci_md
+    # python -m spacy download en_core_web_sm
+]
 
 [tool.black]
 line-length = 100
