--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,8 @@ dependencies = [
     "aiolimiter>=1.1.0",
     "anyio>=4.3.0",
 
-    # CLI & UI
-    "typer>=0.12.3",
-    "rich>=13.7.1",
-    "tqdm>=4.66.4",
-
     # Data Models & Validation
-    "pydantic>=2.7.1",
-    "pydantic-settings>=2.2.1",
     "python-dotenv>=1.0.1",
-    "jsonschema>=4.21.0",
 
     # JSON & Serialization
     "orjson>=3.10.4",
@@ -38,7 +30,6 @@ dependencies = [
     "SPARQLWrapper>=2.0.0",
 
     # Authentication & Security
-    "authlib>=1.3.1",
     "cryptography>=42.0.0",
 
     # Date & Time
@@ -76,7 +67,6 @@ dependencies = [
     "fastapi>=0.110.0",
     "uvicorn[standard]>=0.27.0",
     "python-multipart>=0.0.9",
-    "pydantic[email]>=2.7.1",
 
     # SHACL & Validation
     "pyshacl>=0.25.0",
@@ -139,6 +129,9 @@ models = [
     # python -m spacy download en_core_sci_md
     # python -m spacy download en_core_web_sm
 ]
+
+[project.scripts]
+med = "Medical_KG.cli:main"
 
 [tool.black]
 line-length = 100
