--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,12 @@ apprise==1.9.5
 asgi-lifespan==2.1.0
 asgiref==3.9.2
 astor==0.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens==3.0.0
 asyncpg==0.30.0
 attrs==25.3.0
 Authlib==1.6.5
 beautifulsoup4==4.14.2
-black @ file:///home/conda/feedstock_root/build_artifacts/black-recipe_1742502750715/work
+black==25.1.0
 blake3==1.0.7
 blinker==1.9.0
 blis==0.7.11
@@ -31,23 +31,23 @@ cachetools==6.2.0
 catalogue==2.0.10
 cbor2==5.7.0
 certifi==2025.8.3
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1758716087526/work
-cfgv @ file:///home/conda/feedstock_root/build_artifacts/cfgv_1734267080977/work
+cffi==2.0.0
+cfgv==3.3.1
 chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.2.1
 cloudpathlib==0.22.0
 cloudpickle==3.1.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
+colorama==0.4.6
 coloredlogs==15.0.1
 colorlog==6.9.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_comm_1753453984/work
+comm==0.2.3
 compressed-tensors==0.11.0
 confection==0.1.5
 conllu==6.0.0
 contourpy==1.3.3
 coolname==2.2.0
-coverage @ file:///home/conda/feedstock_root/build_artifacts/coverage_1758500757703/work
+coverage==7.10.7
 cryptography==46.0.2
 cupy-cuda12x==13.6.0
 cycler==0.12.1
@@ -55,12 +55,12 @@ cymem==2.0.11
 dash==3.2.0
 dash-bootstrap-components==2.0.4
 dateparser==1.2.2
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_debugpy_1758162043/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+debugpy==1.8.17
+decorator==5.2.1
 depyf==0.19.0
 dill==0.4.0
 diskcache==5.6.3
-distlib @ file:///home/conda/feedstock_root/build_artifacts/distlib_1752822973799/work
+distlib==0.4.0
 distro==1.9.0
 dnspython==2.8.0
 docker==7.1.0
@@ -69,8 +69,8 @@ duckdb==1.4.0
 einops==0.8.1
 email-validator==2.3.0
 Events==0.5
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1746947292760/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1756729339227/work
+exceptiongroup==1.3.0
+executing==2.2.1
 fast-langdetect==1.0.0
 fastapi==0.118.0
 fastapi-cli==0.0.13
@@ -78,7 +78,7 @@ fastapi-cloud-cli==0.3.0
 fastrlock==0.8.3
 fasttext-predict==0.9.2.4
 ffmpy==0.6.1
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1755216263872/work
+filelock==3.19.1
 Flask==3.1.2
 flatbuffers==25.9.23
 fonttools==4.60.1
@@ -108,17 +108,17 @@ huggingface-hub==0.35.3
 humanfriendly==10.0
 humanize==4.13.0
 hyperframe==6.1.0
-identify @ file:///home/conda/feedstock_root/build_artifacts/identify_1757208948040/work
+identify==2.6.14
 idna==3.10
 imageio==2.37.0
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_importlib-metadata_1747934053/work
-iniconfig @ file:///home/conda/feedstock_root/build_artifacts/iniconfig_1733223141826/work
+importlib_metadata==8.7.0
+iniconfig==2.0.0
 interegular==0.3.3
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1754352855579/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1759151815/work
-ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
+ipykernel==6.30.1
+ipython==9.6.0
+ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+jedi==0.19.2
 Jinja2==3.1.6
 jinja2-humanize-extension==0.4.0
 jiter==0.11.0
@@ -130,8 +130,8 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1748333051527/work
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kiwisolver==1.4.9
 langcodes==3.5.0
 langdetect==1.0.9
@@ -150,7 +150,7 @@ Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.6
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 -e git+ssh://git@github.com/paul-heyse/Medical_KG.git@0dfd002037540fa16c4bf72f4492899b6e9ebf46#egg=Medical_KG
 mineru==2.5.4
@@ -162,7 +162,7 @@ msgpack==1.1.1
 msgspec==0.19.0
 multidict==6.6.4
 murmurhash==1.0.13
-mypy @ file:///home/conda/feedstock_root/build_artifacts/mypy-split_1758277716389/work
+mypy==1.18.2
 mypy_extensions==1.1.0
 narwhals==2.6.0
 neo4j==6.0.2
@@ -171,7 +171,7 @@ networkx==3.5
 ninja==1.13.0
 nltk==3.9.2
 nmslib-metabrainz==2.1.3
-nodeenv @ file:///home/conda/feedstock_root/build_artifacts/nodeenv_1734112117269/work
+nodeenv==1.9.1
 numba==0.61.2
 numpy==2.2.6
 numpy-financial==1.0.0
@@ -208,47 +208,47 @@ opentelemetry-util-http==0.58b0
 orjson==3.11.3
 outlines_core==0.2.11
 owlrl==7.1.4
-packaging @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_packaging_1745345660/work
+packaging==25.0
 pandas==2.3.3
 pandera==0.26.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_parso_1755974222/work
+parso==0.8.5
 partial-json-parser==0.2.1.1.post6
-pathspec @ file:///home/conda/feedstock_root/build_artifacts/pathspec_1733233363808/work
+pathspec==0.12.1
 pdfminer.six==20250506
 pdftext==0.6.3
 pendulum==3.1.0
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==11.3.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1756227402/work
+platformdirs==4.4.0
 plotly==6.3.0
-pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1747339660894/work
+pluggy==1.6.0
 polars==1.33.1
-pre_commit @ file:///home/conda/feedstock_root/build_artifacts/pre-commit_1754831240805/work
+pre_commit==4.3.0
 prefect==3.4.20
 preshed==3.0.10
 prettytable==3.16.0
 prometheus-fastapi-instrumentator==7.1.0
 prometheus_client==0.23.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1756321756983/work
+prompt_toolkit==3.0.52
 propcache==0.3.2
 protobuf==6.32.1
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1758169192777/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+psutil==7.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
 pyarrow==21.0.0
 pybase64==1.4.2
 pybind11==3.0.1
 pyclipper==1.3.0.post6
 pycountry==24.6.1
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
+pycparser==2.22
 pydantic==2.11.9
 pydantic-extra-types==2.10.5
 pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydub==0.25.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1750615794071/work
+Pygments==2.19.2
 pyogrio==0.11.1
 pyparsing==3.2.5
 pypdf==6.1.1
@@ -256,17 +256,17 @@ pypdfium2==4.30.0
 pyproj==3.7.2
 pysbd==0.3.4
 pyshacl==0.30.1
-pytest @ file:///home/conda/feedstock_root/build_artifacts/pytest_1757011799554/work
-pytest-cov @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pytest-cov_1757612051/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
+pytest==8.4.2
+pytest-cov==7.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.3.0
 python-multipart==0.0.20
 python-slugify==8.0.4
 python-socks==2.7.2
 pytz==2025.2
-PyYAML @ file:///home/conda/feedstock_root/build_artifacts/pyyaml_1758891829620/work
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pyzmq_1757387023/work
+PyYAML==6.0.3
+pyzmq==27.1.0
 RapidFuzz==3.14.1
 ray==2.49.2
 rdflib==7.2.1
@@ -305,7 +305,7 @@ setuptools==79.0.1
 shapely==2.1.2
 shellingham==1.5.4
 simsimd==6.5.3
-six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
+six==1.17.0
 smart_open==7.3.1
 sniffio==1.3.1
 soundfile==0.13.1
@@ -317,7 +317,7 @@ spacy-loggers==1.0.5
 SPARQLWrapper==2.0.0
 SQLAlchemy==2.0.43
 srsly==2.5.1
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack_data==0.6.3
 starlette==0.48.0
 stringzilla==4.0.15
 structlog==25.4.0
@@ -331,14 +331,14 @@ tifffile==2025.9.30
 tiktoken==0.11.0
 tokenizers==0.22.1
 toml==0.10.2
-tomli @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_tomli_1753796677/work
+tomli==2.2.1
 tomlkit==0.13.3
 torch==2.8.0+cu129
 torchaudio==2.8.0+cu129
 torchvision==0.23.0+cu129
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1756854920986/work
+tornado==6.5.2
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traitlets==5.14.3
 transformers==4.56.2
 triton==3.4.0
 typeguard==4.4.4
@@ -348,7 +348,7 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
-ukkonen @ file:///home/conda/feedstock_root/build_artifacts/ukkonen_1725784043978/work
+ukkonen==1.0.1
 ultralytics==8.3.204
 ultralytics-thop==2.0.17
 Unidecode==1.4.0
@@ -356,11 +356,11 @@ urllib3==2.5.0
 uv==0.8.22
 uvicorn==0.37.0
 uvloop==0.21.0
-virtualenv @ file:///home/conda/feedstock_root/build_artifacts/virtualenv_1755111788727/work
+virtualenv==20.34.0
 vllm==0.10.2
 wasabi==1.1.3
 watchfiles==1.1.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1758622279606/work
+wcwidth==0.2.14
 weasel==0.4.1
 webencodings==0.5.1
 websockets==15.0.1
@@ -371,4 +371,4 @@ xformers==0.0.32.post1
 xgrammar==0.1.23
 xmltodict==1.0.2
 yarl==1.20.1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1749421620841/work
+zipp==3.23.0
