--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ dependencies = [
 
     # Monitoring & Observability
     "prometheus-client==0.23.1",
+    "python-json-logger==3.3.0",
     "opentelemetry-api==1.37.0",
     "opentelemetry-sdk==1.37.0",
     "opentelemetry-instrumentation-fastapi==0.58b0",
