--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
 
     # Data Models & Validation
     "python-dotenv==1.1.1",
+    "pydantic==2.11.9",
+    "pydantic==2.10.6",
 
     # JSON & Serialization
     "orjson==3.11.3",
