--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,17 @@ jobs:
           environment-name: ci
           cache-downloads: true
           cache-env: true
-      - name: Run tests
+      - name: Run tests with coverage
         shell: bash -l {0}
         run: |
           python -V
-          pytest -q
+          pytest
+      - name: Upload coverage reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-reports
+          if-no-files-found: warn
+          path: |
+            coverage.xml
+            htmlcov/
