--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,3 +158,14 @@ exclude = [
     "ops/e2e/",
     "ops/chaos/",
 ]
+
+[[tool.mypy.overrides]]
+module = [
+    "Medical_KG.compat.locust",
+    "Medical_KG.config.manager",
+    "Medical_KG.extraction.*",
+    "Medical_KG.facets.*",
+    "Medical_KG.observability.*",
+    "Medical_KG.security.*",
+]
+ignore_errors = true
