--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,8 @@ line-length = 100
 [tool.ruff]
 line-length = 100
 target-version = "py312"
+
+[tool.ruff.lint]
 extend-select = ["I"]
 
 [tool.mypy]
