--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
             src/Medical_KG/config \
             src/Medical_KG/utils/optional_dependencies.py \
             src/Medical_KG/cli.py
+      - name: Check for legacy ingestion commands
+        shell: bash -l {0}
+        continue-on-error: true
+        run: |
+          python scripts/cli_migration/check_ci_commands.py
       - name: Run tests
         shell: bash -l {0}
         run: |
