--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ email-validator==2.3.0
 Events==0.5
 exceptiongroup==1.3.0
 executing==2.2.1
-fast-langdetect==1.0.0
+fast-langdetect>=0.2.3,<0.3.0
 fastapi==0.118.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
