--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
           python -m mypy --strict \
             src/Medical_KG/config \
             src/Medical_KG/utils/optional_dependencies.py \
-            src/Medical_KG/cli.py
+            src/Medical_KG/cli.py \
+            src/Medical_KG/ir
       - name: Validate configuration payloads
         shell: bash -l {0}
         run: |
